src/objects/Exceptions__c.object
<CustomObject>
    <fields>
        <fullName>Class_Or_Trigger_Name__c</fullName>
        <label>Class Or Trigger Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exception_Type__c</fullName>
        <label>Exception Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method_Or_Block_Name__c</fullName>
        <label>Method Or Block Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Exception</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Error_Message__c</columns>
        <columns>Exception_Type__c</columns>
        <columns>Stack_Trace__c</columns>
        <columns>Class_Or_Trigger_Name__c</columns>
        <columns>Method_Or_Block_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Exception ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>